[gd_scene load_steps=4 format=2]

[ext_resource path="res://cenas/teste.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Jogo.gd" type="Script" id=2]
[ext_resource path="res://cenas/Pilha.gd" type="Script" id=3]

[node name="TelaJogo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.860931
margin_right = -0.860962
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teste" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AddCarta" type="Button" parent="teste"]
margin_left = 48.4878
margin_top = 143.525
margin_right = 60.4878
margin_bottom = 163.525
text = "AddCarta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="teste/AddCarta"]
margin_left = 2.3268
margin_top = 64.2063
margin_right = 42.3268
margin_bottom = 78.2063
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerID" type="TextEdit" parent="teste/AddCarta"]
margin_left = 2.3268
margin_top = 44.2063
margin_right = 32.3268
margin_bottom = 64.2063
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CartaID" type="Label" parent="teste/AddCarta"]
margin_left = 54.6758
margin_top = 64.2063
margin_right = 94.6758
margin_bottom = 78.2063
text = "Carta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carta" type="TextEdit" parent="teste/AddCarta"]
margin_left = 54.1861
margin_top = 44.2063
margin_right = 84.1861
margin_bottom = 64.2063
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 411.473
margin_top = 20.5382
margin_right = 451.473
margin_bottom = 34.5382
text = "Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node" parent="."]

[node name="Pilha" type="Node2D" parent="."]
position = Vector2( 413.38, 184.48 )
script = ExtResource( 3 )
[connection signal="pressed" from="teste/AddCarta" to="teste" method="_on_AddCarta_pressed"]
